Issue #5933: Fix some gcc -Wextra warnings.  Thanks Victor Stinner for the patch.